objects/Favorites__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Global_Favorite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Global Favorite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Favorites</relationshipLabel>
        <relationshipName>Favorites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Favorites</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Favorites</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Original_Quote__c</columns>
        <columns>Global_Favorite__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Favorites Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Favorites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>